kafka/confluent/kubernetes/kafka-connect0-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-connect0-ingress
  namespace: confluent-operator
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: kafka-connect.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: connectors-0-internal
                port:
                  number: 8083
