kafka/confluent/kubernetes/kafka-connect1-ingress.yaml
# apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1beta1
# apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-connect1-ingress
  namespace: confluent-operator
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: kafka-connect1.example.com
      http:
        paths:
          - backend:
              serviceName: connectors-0-internal
              servicePort: 8083
